<resources>
    <string name="app_name">KvikMaler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KvikMaler</string>
    <string name="nav_header_subtitle">kvikmaler@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_information">Information</string>
    <string name="menu_services">Services</string>
    <string name="menu_price">Prices</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_login">Login</string>
</resources>