<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_info_24"
            android:title="@string/menu_information" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_paint_24"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_price"
            android:icon="@drawable/ic_money_24"
            android:title="@string/menu_price" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_24"
            android:title="@string/menu_notifications"/>
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login_24"
            android:title="@string/menu_login"/>


    </group>
</menu>