<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_information">

    <fragment
        android:id="@+id/nav_information"
        android:name="com.example.KvikMaler2.ui.information.InformationFragment"
        android:label="@string/menu_information"
        tools:layout="@layout/fragment_information" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.KvikMaler2.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_price"
        android:name="com.example.KvikMaler2.ui.price.PriceFragment"
        android:label="@string/menu_price"
        tools:layout="@layout/fragment_prices" />
</navigation>